--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OurPass Core CDN",
   "main": "cdn.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "minify": "minify cdn.js > cdn.min.js"
   },
   "repository": {
     "type": "git",
